fix: Further reduce spacing in Services mobile - remove gaps between heading and text

--- a/interior-design/components/styles/services.module.scss
+++ b/interior-design/components/styles/services.module.scss
@@ -146,7 +146,17 @@
 
   .paragraphCard {
     font-size: 0.65rem;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.2rem;
+    margin-top: 0;
+  }
+
+  .card_box ul li {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  .card_box ul li:first-child {
+    margin-top: 0;
   }
 
   .card_box ul li:last-child {
@@ -168,12 +178,18 @@
     width: 100%;
   }
 
+  .card_box ul {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
   .card_name {
-    margin-bottom: 0.3rem;
+    margin-bottom: 0;
   }
 
   .headingThree {
-    margin-bottom: 0.2rem;
+    margin-bottom: 0.3rem;
+    margin-top: 0;
   }
 
   .modal-container {
